Updated Dashboard UI alignment, modified Calendar dimensions, and changed Match Grid from 2x3 to 2x4 to prevent unecessary scrollbars.

--- a/client/src/styles/Chat.css
+++ b/client/src/styles/Chat.css
@@ -10,6 +10,7 @@
     color: #2774AE;
     overflow-y: auto;
     flex-shrink: 0;
+    margin-top: 0px;
 }
 
 .chat-box h1 {
