--- a/client/src/styles/Classes.css
+++ b/client/src/styles/Classes.css
@@ -5,7 +5,6 @@
     border-radius: 15.95px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
     width: 100%;
-    margin-top: 25px;
   }
   
   .classes-card h3 {
